--- a/src/winpred/configs/config.json
+++ b/src/winpred/configs/config.json
@@ -3,5 +3,14 @@
 
 
 {
-  "exp_name": "first_experience"
+  "exp_name": "fully_connected",
+  "batch_size": 10,
+  "num_epochs": 4,
+  "data_file": "../../data/head_to_head1.csv",
+  "generate_tfrecords": "True",
+  "num_data": 10000,
+  "train_ratio": 0.8,
+  "max_to_keep": 5,
+  "summarize_every_n_iter": 10,
+  "test_every_n_iter": 100
 }
